dev/app1.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: app1
  labels:
    name: app1
