dev/sachinkundu.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: sachinkundu
  labels:
    name: sachinkundu
    created-by: sakundu@microsoft.com
