dev/kured.yaml
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: kured            # Must match `--ds-name`
  namespace: kube-system # Must match `--ds-namespace`
spec:
  selector:
    matchLabels:
      name: kured
  updateStrategy:
   type: RollingUpdate
  template:
    metadata:
      labels:
        name: kured
    spec:
      serviceAccountName: kured
      tolerations:
        - key: node-role.kubernetes.io/master
          effect: NoSchedule
      hostPID: true # Facilitate entering the host mount namespace via init
      restartPolicy: Always
      containers:
        - name: kured
          image: docker.io/weaveworks/kured:1.2.0
          imagePullPolicy: IfNotPresent
          securityContext:
            privileged: true # Give permission to nsenter /proc/1/ns/mnt
          command:
            - /usr/bin/kured
           - --alert-filter-regexp=^RebootRequired$
           - --blocking-pod-selector=runtime=long,cost=expensive
           - --blocking-pod-selector=name=temperamental
           - --blocking-pod-selector=...
           - --ds-name=kured
           - --ds-namespace=kube-system
           - --lock-annotation=weave.works/kured-node-lock
           - --period=1h
           - --prometheus-url=http://prometheus.monitoring.svc.cluster.local
           - --reboot-sentinel=/var/run/reboot-required
