dev/akv2k8s-env-injector.yaml
---
---

# Source: azure-key-vault-env-injector/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: akv2k8s-env-injector-azure-key-vault-env-injector
  labels:
    app: akv2k8s-env-injector-azure-key-vault-env-injector
    chart: azure-key-vault-env-injector-0.1.5
    release: akv2k8s-env-injector
    heritage: Tiller
    component: mutating
spec:
  type: ClusterIP
  ports:
    - port: 443
      targetPort: 443
      protocol: TCP
      name: azure-keyvault-secrets-webhook
  selector:
    app: azure-key-vault-env-injector
    release: akv2k8s-env-injector

---

# Source: azure-key-vault-env-injector/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: akv2k8s-env-injector-azure-key-vault-env-injector
  labels:
    app: azure-key-vault-env-injector
    chart: azure-key-vault-env-injector-0.1.5
    release: akv2k8s-env-injector
    heritage: Tiller
    component: webhook
spec:
  replicas: 1
  selector:
    matchLabels:
      app: azure-key-vault-env-injector
      release: akv2k8s-env-injector
  template:
    metadata:
      labels:
        app: azure-key-vault-env-injector
        release: akv2k8s-env-injector
      annotations:
        checksum/config: 7e7b7431fc4323260e968b594a190dcc8739615cad78b21abe202365251795fb
    spec:
      serviceAccountName: akv2k8s-env-injector-azure-key-vault-env-injector
      volumes:
      - name: serving-cert
        secret:
          defaultMode: 420
          secretName: akv2k8s-env-injector-azure-key-vault-env-injector
      - name: dockersock
        hostPath:
          path: /var/run/docker.sock
          type: File
      - name: azureconf
        hostPath:
          path: /etc/kubernetes/azure.json
          type: File
      containers:
        - name: azure-key-vault-env-injector
          image: "spvest/azure-keyvault-webhook:0.1.15"
          imagePullPolicy: IfNotPresent
          ports:
          - containerPort: 443
          volumeMounts:
          - mountPath: /var/serving-cert
            name: serving-cert
          - mountPath: /var/run/docker.sock
            name: dockersock
            readOnly: true
          - mountPath: /etc/kubernetes/azure.json
            name: azureconf
            readOnly: true
          resources:
            {}
            

---

# Source: azure-key-vault-env-injector/templates/apiservice.yaml





apiVersion: v1
kind: List
metadata:
items:

- apiVersion: v1
  kind: Secret
  metadata:
    name: akv2k8s-env-injector-azure-key-vault-env-injector
  data:
    servingCert: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURKakNDQWc2Z0F3SUJBZ0lRYkR4Wk9WaVpkSjR2UjU1a3prYmU0ekFOQmdrcWhraUc5dzBCQVFzRkFEQVYKTVJNd0VRWURWUVFERXdwemRtTXRZMkYwTFdOaE1CNFhEVEl3TURJeE1qRXdNRGsxTlZvWERUSXhNREl4TVRFdwpNRGsxTlZvd1NERkdNRVFHQTFVRUF4TTlZV3QyTW1zNGN5MWxibll0YVc1cVpXTjBiM0l0WVhwMWNtVXRhMlY1CkxYWmhkV3gwTFdWdWRpMXBibXBsWTNSdmNpNWtaV1poZFd4MExuTjJZekNDQVNJd0RRWUpLb1pJaHZjTkFRRUIKQlFBRGdnRVBBRENDQVFvQ2dnRUJBTUxOeE9BcFg0dnBJRVR2YmN2TlAwMXlYUDhCdHdWK24rVXFycGJmU0xYKwpZU2Y0VWxLZG5 [...]
    servingKey: LS0tLS1CRUdJTiBSU0EgUFJJVkFURSBLRVktLS0tLQpNSUlFcEFJQkFBS0NBUUVBd3MzRTRDbGZpK2tnUk85dHk4MC9UWEpjL3dHM0JYNmY1U3F1bHQ5SXRmNWhKL2hTClVwMmNQY3p3S0wwNTYxNnVUSitGenFzYmpsT1B6NTBiVS9DdVpvRysyYzB4UGhqSXB3aEhPL2RoQ3NPZlFUOTkKbkJGTWVWWEM1WXJWQ25QaGtMY1ZpU3dzVVR0UGlkUDg0QkhrQXFVeUozeTFDM1V2amtBYmNQU0wvODE2WW1tRwp4VnRqYzErZVk1UEdBcVk1WkttL3BGcGtUYXRWdDNZS3FRMG1maE1wM0VsdDFYZnVzN2dnWGpuVkJaOHZRZW5JCk1uYU93SDFqY05QV0xlWTEzWkpUMWZrRTlFdlE1OEx3NS95TTEvdW9OTndoVU4wWk4xaUJ0cE5pTXBQMzhOYUcKeWx1VkdV [...]
    caCert: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUM5ekNDQWQrZ0F3SUJBZ0lSQU12VTYxNGQ3ekdDRzZVd2dvNkkwZkF3RFFZSktvWklodmNOQVFFTEJRQXcKRlRFVE1CRUdBMVVFQXhNS2MzWmpMV05oZEMxallUQWVGdzB5TURBeU1USXhNREE1TlRWYUZ3MHpNREF5TURreApNREE1TlRWYU1CVXhFekFSQmdOVkJBTVRDbk4yWXkxallYUXRZMkV3Z2dFaU1BMEdDU3FHU0liM0RRRUJBUVVBCkE0SUJEd0F3Z2dFS0FvSUJBUURjTGlXUlgzcEpsUVJQY1RydlcwY1NkUXpHaDJpeUVqMnJBQUE3Q0JvcjdCUWkKckNNbGMzeitZRTBQcnBqZ3RBM0dDSmkyYUNTbmN5M2U5eXNwU1dHWVR1ZmRkcHNyaHJUamZzTThmdXY1S3lKawpmdno5ckVjWXMvZDly [...]

- apiVersion: admissionregistration.k8s.io/v1beta1
  kind: MutatingWebhookConfiguration
  metadata:
    name: akv2k8s-env-injector-azure-key-vault-env-injector
  webhooks:
  - name: pods.azure-key-vault-env-injector.admission.spv.no
    clientConfig:
      service:
        namespace: default
        name: akv2k8s-env-injector-azure-key-vault-env-injector
        path: /pods
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUM5ekNDQWQrZ0F3SUJBZ0lSQU12VTYxNGQ3ekdDRzZVd2dvNkkwZkF3RFFZSktvWklodmNOQVFFTEJRQXcKRlRFVE1CRUdBMVVFQXhNS2MzWmpMV05oZEMxallUQWVGdzB5TURBeU1USXhNREE1TlRWYUZ3MHpNREF5TURreApNREE1TlRWYU1CVXhFekFSQmdOVkJBTVRDbk4yWXkxallYUXRZMkV3Z2dFaU1BMEdDU3FHU0liM0RRRUJBUVVBCkE0SUJEd0F3Z2dFS0FvSUJBUURjTGlXUlgzcEpsUVJQY1RydlcwY1NkUXpHaDJpeUVqMnJBQUE3Q0JvcjdCUWkKckNNbGMzeitZRTBQcnBqZ3RBM0dDSmkyYUNTbmN5M2U5eXNwU1dHWVR1ZmRkcHNyaHJUamZzTThmdXY1S3lKawpmdno5ckVjWXMv [...]
    rules:
    - operations:
      - CREATE
      apiGroups:
      - "*"
      apiVersions:
      - "*"
      resources:
      - pods
    failurePolicy: Fail
    namespaceSelector:
      matchLabels:
        azure-key-vault-env-injection: enabled
      # matchExpressions:
      # - key: name
      #   operator: NotIn
      #   values:
      #   - default
